# Miki-a-telegram-media-archiver

./: .env.sample  .gitignore  DEPLOY_DO.md  Dockerfile  Makefile  README.md  development_note.md  docker-compose.yml  pyproject.toml  render.yaml
deploy/: Caddyfile
docs/: architecture.md  burner-layer.md  codebase-map.md  deployment.md  hosted_webhook_deployment.md  phase_10_pilot.md  phase_1_specification.md  phase_2_foundation.md  phase_3_topic_management.md  phase_4_indexing.md  phase_5_sorting.md  phase_6_retrieval.md  phase_7_reliability.md  phase_8_interoperability.md  phase_9_operations.md  release_readiness.md
miki_sorter_bot/: __init__.py  burner.py  burner_backfill.py  burner_backup.py  burner_bridge.py  burner_reporting.py  burner_session.py  collector.py  config.py  diagnostics.py  error_reporting.py  health_server.py  indexing.py  instance_lock.py  integrations.py  logging_config.py  lookback.py  main.py  management.py  migrations.py  operations.py  ops.py  periodic_notice.py  recovery.py  reliability.py  repositories.py  retrieval.py  routing.py  settings_registry.py  show_ids.py  sorting.py  storage.py  webhook_supervisor.py
tests/: conftest.py  test_burner.py  test_burner_backfill.py  test_burner_backup.py  test_burner_bridge.py  test_burner_control.py  test_burner_session.py  test_collector.py  test_config.py  test_diagnostics.py  test_entrypoints.py  test_error_reporting.py  test_health_server.py  test_indexing.py  test_instance_lock.py  test_integrations.py  test_logging_config.py  test_lookback.py  test_main.py  test_management.py  test_migrations.py  test_operations.py  test_ops.py  test_periodic_notice.py  test_phase_10_validation.py  test_recovery.py  test_reliability.py  test_repositories.py  test_retrieval.py  test_routing.py  test_runtime_admin.py  test_settings_registry.py  test_show_ids.py  (+5 more)
